// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse() 2 page range 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1-2",
    "label": "1-2",
    "pageCount": 2,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() 3 page range 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1-3",
    "label": "1-3",
    "pageCount": 3,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() caption with bold 1`] = `
Array [
  Object {
    "captionCount": 2,
    "captionWordCount": 7,
    "content": Array [
      Object {
        "captionCount": 2,
        "captionWordCount": 7,
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "I",
                "type": "lettering-bold",
              },
              Object {
                "content": " didn't mean ",
                "type": "text",
              },
              Object {
                "content": "that",
                "type": "lettering-bold",
              },
              Object {
                "content": "!",
                "type": "text",
              },
            ],
            "id": "1.1.1",
            "modifier": null,
            "number": 1,
            "startingLine": 3,
            "type": "caption",
            "wordCount": 4,
          },
          Object {
            "content": Array [
              Object {
                "content": "this is *not*",
                "type": "text",
              },
            ],
            "id": "1.1.2",
            "modifier": null,
            "number": 2,
            "startingLine": 5,
            "type": "caption",
            "wordCount": 3,
          },
        ],
        "dialogueCount": 0,
        "dialogueWordCount": 0,
        "id": "1.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [],
        "startingLine": 1,
        "type": "panel",
      },
    ],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 1,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() dialogue starts with bold 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "only bold",
                "type": "lettering-bold",
              },
            ],
            "id": "1.1.1",
            "modifier": null,
            "number": 1,
            "speaker": "bob",
            "startingLine": 3,
            "type": "dialogue",
            "wordCount": 2,
          },
          Object {
            "content": Array [
              Object {
                "content": "starts bold",
                "type": "lettering-bold",
              },
              Object {
                "content": " and then",
                "type": "text",
              },
            ],
            "id": "1.1.2",
            "modifier": null,
            "number": 2,
            "speaker": "bob",
            "startingLine": 5,
            "type": "dialogue",
            "wordCount": 4,
          },
        ],
        "dialogueCount": 2,
        "dialogueWordCount": 6,
        "id": "1.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [
          "bob",
          "bob",
        ],
        "startingLine": 1,
        "type": "panel",
      },
    ],
    "dialogueCount": 2,
    "dialogueWordCount": 6,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 1,
    "sfxCount": 0,
    "speakers": Array [
      "bob",
      "bob",
    ],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() dialogue with bold 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "eat ",
                "type": "text",
              },
              Object {
                "content": "this",
                "type": "lettering-bold",
              },
              Object {
                "content": " not ",
                "type": "text",
              },
              Object {
                "content": "that",
                "type": "lettering-bold",
              },
              Object {
                "content": "!",
                "type": "text",
              },
            ],
            "id": "1.1.1",
            "modifier": null,
            "number": 1,
            "speaker": "bob",
            "startingLine": 3,
            "type": "dialogue",
            "wordCount": 4,
          },
          Object {
            "content": Array [
              Object {
                "content": "this is *not*",
                "type": "text",
              },
            ],
            "id": "1.1.2",
            "modifier": null,
            "number": 2,
            "speaker": "bob",
            "startingLine": 5,
            "type": "dialogue",
            "wordCount": 3,
          },
        ],
        "dialogueCount": 2,
        "dialogueWordCount": 7,
        "id": "1.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [
          "bob",
          "bob",
        ],
        "startingLine": 1,
        "type": "panel",
      },
    ],
    "dialogueCount": 2,
    "dialogueWordCount": 7,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 1,
    "sfxCount": 0,
    "speakers": Array [
      "bob",
      "bob",
    ],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() dialogue with modifier 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "go!",
                "type": "text",
              },
            ],
            "id": "1.1.1",
            "modifier": "yell",
            "number": 1,
            "speaker": "bob",
            "startingLine": 3,
            "type": "dialogue",
            "wordCount": 1,
          },
        ],
        "dialogueCount": 1,
        "dialogueWordCount": 1,
        "id": "1.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [
          "bob",
        ],
        "startingLine": 1,
        "type": "panel",
      },
    ],
    "dialogueCount": 1,
    "dialogueWordCount": 1,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 1,
    "sfxCount": 0,
    "speakers": Array [
      "bob",
    ],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() inverted page range 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1-2",
    "label": "1-2",
    "pageCount": 2,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() kitchen sink 1`] = `
Array [
  Object {
    "id": "metadata-1",
    "name": "title",
    "startingLine": 0,
    "type": "metadata",
    "value": "test",
  },
  Object {
    "id": "metadata-2",
    "name": "issue",
    "startingLine": 1,
    "type": "metadata",
    "value": "1",
  },
  Object {
    "id": "metadata-3",
    "name": "by",
    "startingLine": 2,
    "type": "metadata",
    "value": "the author",
  },
  Object {
    "captionCount": 1,
    "captionWordCount": 1,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [
          Object {
            "content": "Some characters stand around. And do stuff.",
            "id": "paragraph-1",
            "startingLine": 8,
            "type": "paragraph",
          },
          Object {
            "content": Array [
              Object {
                "content": "ok",
                "type": "text",
              },
            ],
            "id": "1-2.1.1",
            "modifier": null,
            "number": 1,
            "speaker": "bob",
            "startingLine": 10,
            "type": "dialogue",
            "wordCount": 1,
          },
          Object {
            "content": Array [
              Object {
                "content": "try it ",
                "type": "text",
              },
              Object {
                "content": "again",
                "type": "lettering-bold",
              },
            ],
            "id": "1-2.1.2",
            "modifier": null,
            "number": 2,
            "speaker": "bob",
            "startingLine": 12,
            "type": "dialogue",
            "wordCount": 3,
          },
        ],
        "dialogueCount": 2,
        "dialogueWordCount": 4,
        "id": "1-2.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [
          "bob",
          "bob",
        ],
        "startingLine": 6,
        "type": "panel",
      },
      Object {
        "captionCount": 1,
        "captionWordCount": 1,
        "content": Array [
          Object {
            "content": "This is panel description.",
            "id": "paragraph-2",
            "startingLine": 16,
            "type": "paragraph",
          },
          Object {
            "content": "boom",
            "id": "1-2.2.3",
            "modifier": null,
            "number": 3,
            "startingLine": 18,
            "type": "sfx",
          },
          Object {
            "content": Array [
              Object {
                "content": "yep",
                "type": "text",
              },
            ],
            "id": "1-2.2.4",
            "modifier": null,
            "number": 4,
            "startingLine": 20,
            "type": "caption",
            "wordCount": 1,
          },
        ],
        "dialogueCount": 0,
        "dialogueWordCount": 0,
        "id": "1-2.2",
        "number": 2,
        "sfxCount": 1,
        "speakers": Array [],
        "startingLine": 14,
        "type": "panel",
      },
    ],
    "dialogueCount": 2,
    "dialogueWordCount": 4,
    "id": "1-2",
    "label": "1-2",
    "pageCount": 2,
    "panelCount": 2,
    "sfxCount": 1,
    "speakers": Array [
      "bob",
      "bob",
    ],
    "startingLine": 4,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [
          Object {
            "content": "And they walk off into the sunset.",
            "id": "paragraph-3",
            "startingLine": 26,
            "type": "paragraph",
          },
        ],
        "dialogueCount": 0,
        "dialogueWordCount": 0,
        "id": "3.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [],
        "startingLine": 24,
        "type": "panel",
      },
    ],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "3",
    "label": "3",
    "pageCount": 1,
    "panelCount": 1,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 22,
    "type": "spread",
  },
]
`;

exports[`parse() many blank lines 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "2",
    "label": "2",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 6,
    "type": "spread",
  },
]
`;

exports[`parse() no blank lines 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "2",
    "label": "2",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 1,
    "type": "spread",
  },
]
`;

exports[`parse() page mix 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "2-3",
    "label": "2-3",
    "pageCount": 2,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 2,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "4",
    "label": "4",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 4,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "5-10",
    "label": "5-10",
    "pageCount": 6,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 6,
    "type": "spread",
  },
]
`;

exports[`parse() pages with panels 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [],
        "dialogueCount": 0,
        "dialogueWordCount": 0,
        "id": "2.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [],
        "startingLine": 4,
        "type": "panel",
      },
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [],
        "dialogueCount": 0,
        "dialogueWordCount": 0,
        "id": "2.2",
        "number": 2,
        "sfxCount": 0,
        "speakers": Array [],
        "startingLine": 6,
        "type": "panel",
      },
    ],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "2",
    "label": "2",
    "pageCount": 1,
    "panelCount": 2,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 2,
    "type": "spread",
  },
]
`;

exports[`parse() pages with panels and lettering 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
  Object {
    "captionCount": 1,
    "captionWordCount": 1,
    "content": Array [
      Object {
        "captionCount": 0,
        "captionWordCount": 0,
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "ok",
                "type": "text",
              },
            ],
            "id": "2.1.1",
            "modifier": null,
            "number": 1,
            "speaker": "bob",
            "startingLine": 6,
            "type": "dialogue",
            "wordCount": 1,
          },
          Object {
            "content": Array [
              Object {
                "content": "try it again",
                "type": "text",
              },
            ],
            "id": "2.1.2",
            "modifier": null,
            "number": 2,
            "speaker": "bob",
            "startingLine": 8,
            "type": "dialogue",
            "wordCount": 3,
          },
        ],
        "dialogueCount": 2,
        "dialogueWordCount": 4,
        "id": "2.1",
        "number": 1,
        "sfxCount": 0,
        "speakers": Array [
          "bob",
          "bob",
        ],
        "startingLine": 4,
        "type": "panel",
      },
      Object {
        "captionCount": 1,
        "captionWordCount": 1,
        "content": Array [
          Object {
            "content": "This is panel description.",
            "id": "paragraph-1",
            "startingLine": 12,
            "type": "paragraph",
          },
          Object {
            "content": "boom",
            "id": "2.2.3",
            "modifier": null,
            "number": 3,
            "startingLine": 14,
            "type": "sfx",
          },
          Object {
            "content": Array [
              Object {
                "content": "yep",
                "type": "text",
              },
            ],
            "id": "2.2.4",
            "modifier": null,
            "number": 4,
            "startingLine": 16,
            "type": "caption",
            "wordCount": 1,
          },
        ],
        "dialogueCount": 0,
        "dialogueWordCount": 0,
        "id": "2.2",
        "number": 2,
        "sfxCount": 1,
        "speakers": Array [],
        "startingLine": 10,
        "type": "panel",
      },
    ],
    "dialogueCount": 2,
    "dialogueWordCount": 4,
    "id": "2",
    "label": "2",
    "pageCount": 1,
    "panelCount": 2,
    "sfxCount": 1,
    "speakers": Array [
      "bob",
      "bob",
    ],
    "startingLine": 2,
    "type": "spread",
  },
]
`;

exports[`parse() self to self page range 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() single page 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
]
`;

exports[`parse() two pages 1`] = `
Array [
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "1",
    "label": "1",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 0,
    "type": "spread",
  },
  Object {
    "captionCount": 0,
    "captionWordCount": 0,
    "content": Array [],
    "dialogueCount": 0,
    "dialogueWordCount": 0,
    "id": "2",
    "label": "2",
    "pageCount": 1,
    "panelCount": 0,
    "sfxCount": 0,
    "speakers": Array [],
    "startingLine": 2,
    "type": "spread",
  },
]
`;
